--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
+
+
 {
   "compilerOptions": {
     "target": "es5",
@@ -13,10 +15,10 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "ES6",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx"
   },
